--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!-- Шапка -->
     <header>
       <!-- Меню навигации -->
-      <div class="container">
+      <div class="container header-content">
         <nav class="navigation">
           <!-- Логотип -->
           <a href="./index.html" class="logo link"><span class="web-logo">Web</span>Studio</a>
           <ul class="navigation-list list">
             <!-- Меню сайта -->
             <li class="navigation-item">
-              <a href="./index.html" class="link link current">Студия</a>
+              <a href="./index.html" class="link current">Студия</a>
             </li>
             <li class="navigation-item">
               <a href="./portfolio.html" class="link">Портфолио</a>
@@ -39,8 +39,10 @@
           </ul>
         </nav>
         <!-- Контакты -->
-        <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="telnumber link">+38 096 111 11 11</a>
+        <div>
+          <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="telnumber link">+38 096 111 11 11</a>
+        </div>
       </div>
     </header>
     <!-- Мейн -->
@@ -53,7 +55,7 @@
         </div>
       </section>
       <!-- Наші особливості -->
-      <section class="features">
+      <section class="features section">
         <div class="container">
           <h2 hidden>Наши особенности</h2>
           <ul class="features-list list">
@@ -83,7 +85,7 @@
         </div>
       </section>
       <!-- Зайнятість -->
-      <section class="employment">
+      <section class="employment section">
         <div class="container">
           <h2 class="employment-title">Чем мы занимаемся</h2>
           <ul class="employment-list list">
@@ -115,7 +117,7 @@
         </div>
       </section>
       <!-- Команда -->
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
