--- a/portfolio.html
+++ b/portfolio.html
@@ -21,152 +21,188 @@
     <!-- Шапка -->
     <header>
       <!-- Меню навигации -->
-      <nav class="navigation">
-        <!-- Логотип -->
-        <a href="./index.html" class="logo link"><span class="web-logo">Web</span>Studio</a>
-        <ul class="navigation-list list">
-          <!-- Меню сайта -->
-          <li class="navigation-item">
-            <a href="./index.html" class="link">Студия</a>
-          </li>
-          <li class="navigation-item">
-            <a href="./portfolio.html" class="link current">Портфолио</a>
-          </li>
-          <li class="navigation-item">
-            <a href="" class="link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- Контакты -->
-      <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="telnumber link">+38 096 111 11 11</a>
+      <div class="container header-content">
+        <nav class="navigation">
+          <!-- Логотип -->
+          <a href="./index.html" class="logo link"><span class="web-logo">Web</span>Studio</a>
+          <ul class="navigation-list list">
+            <!-- Меню сайта -->
+            <li class="navigation-item">
+              <a href="./index.html" class="link">Студия</a>
+            </li>
+            <li class="navigation-item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="navigation-item">
+              <a href="" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Контакты -->
+        <div>
+          <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="telnumber link">+38 096 111 11 11</a>
+        </div>
+      </div>
     </header>
     <!-- Мейн -->
     <main>
       <!-- Наши работы -->
-      <section class="portfolio">
-        <h1 hidden>Наше портфолио</h1>
-        <!-- Список фильтров -->
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <button class="filter-button" type="button">Все</button>
-          </li>
-          <li class="portfolio-item">
-            <button class="filter-button" type="button">Веб-сайты</button>
-          </li>
-          <li class="portfolio-item">
-            <button class="filter-button" type="button">Приложения</button>
-          </li>
-          <li class="portfolio-item">
-            <button class="filter-button" type="button">Дизайн</button>
-          </li>
-          <li class="portfolio-item">
-            <button class="filter-button" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <!-- Список примеров работ -->
-        <ul class="project-list list">
-          <li class="project-item">
-            <a href="" class="link">
-              <img
-                src="./images/technocryak.jpg"
-                width="370"
-                height="294"
-                alt="MacBook Pro с открытым на нем сайтом"
-              />
-              <h2 class="project-title">Технокряк</h2>
-              <p class="filter-title">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img
-                src="./images/no-vs-gs.jpg"
-                width="370"
-                height="294"
-                alt="Постер с баскетболистами"
-              />
-              <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-              <p class="filter-title">Дизайн</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img
-                src="./images/seafood.jpg"
-                width="370"
-                height="294"
-                alt="Емблема-рыба ресторана Seafood"
-              />
-              <h2 class="project-title">Ресторан Seafood</h2>
-              <p class="filter-title">Приложение</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img src="./images/prime.jpg" width="370" height="294" alt="Наушники черного цвета" />
-              <h2 class="project-title">Проект Prime</h2>
-              <p class="filter-title">Маркетинг</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img src="./images/boxes.jpg" width="370" height="294" alt="Картонные коробки" />
-              <h2 class="project-title">Проект Boxes</h2>
-              <p class="filter-title">Приложение</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img
-                src="./images/insp-has-no-borders.jpg"
-                width="370"
-                height="294"
-                alt="Монитор компьютера с открытым на нем сайтом"
-              />
-              <h2 class="project-title">Inspiration has no Borders</h2>
-              <p class="filter-title">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img src="./images/lim-edition.jpg" width="370" height="294" alt="Открытая книга" />
-              <h2 class="project-title">Издание Limited Edition</h2>
-              <p class="filter-title">Дизайн</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img src="./images/project-lab.jpg" width="370" height="294" alt="Бирка с надписью" />
-              <h2 class="project-title">Проект LAB</h2>
-              <p class="filter-title">Маркетинг</p>
-            </a>
-          </li>
-          <li class="project-item">
-            <a href="" class="link">
-              <img
-                src="./images/growing-business.jpg"
-                width="370"
-                height="294"
-                alt="Человеческие руки печатающие на открытом ноутбуке"
-              />
-              <h2 class="project-title">Growing Business</h2>
-              <p class="filter-title">Приложение</p>
-            </a>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h1 hidden>Наше портфолио</h1>
+          <!-- Список фильтров -->
+          <ul class="filter-list list">
+            <li class="filter-item">
+              <button class="filter-button" type="button">Все</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Приложения</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button class="filter-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <!-- Список примеров работ -->
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/technocryak.jpg"
+                  width="370"
+                  height="294"
+                  alt="MacBook Pro с открытым на нем сайтом"
+                />
+                <div>
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="filter-title">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/no-vs-gs.jpg"
+                  width="370"
+                  height="294"
+                  alt="Постер с баскетболистами"
+                />
+                <div>
+                  <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="filter-title">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/seafood.jpg"
+                  width="370"
+                  height="294"
+                  alt="Емблема-рыба ресторана Seafood"
+                />
+                <div>
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="filter-title">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/prime.jpg"
+                  width="370"
+                  height="294"
+                  alt="Наушники черного цвета"
+                />
+                <div>
+                  <h2 class="portfolio-title">Проект Prime</h2>
+                  <p class="filter-title">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img src="./images/boxes.jpg" width="370" height="294" alt="Картонные коробки" />
+                <div>
+                  <h2 class="portfolio-title">Проект Boxes</h2>
+                  <p class="filter-title">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/insp-has-no-borders.jpg"
+                  width="370"
+                  height="294"
+                  alt="Монитор компьютера с открытым на нем сайтом"
+                />
+                <div>
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="filter-title">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img src="./images/lim-edition.jpg" width="370" height="294" alt="Открытая книга" />
+                <div>
+                  <h2 class="portfolio-title">Издание Limited Edition</h2>
+                  <p class="filter-title">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/project-lab.jpg"
+                  width="370"
+                  height="294"
+                  alt="Бирка с надписью"
+                />
+                <div>
+                  <h2 class="portfolio-title">Проект LAB</h2>
+                  <p class="filter-title">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/growing-business.jpg"
+                  width="370"
+                  height="294"
+                  alt="Человеческие руки печатающие на открытом ноутбуке"
+                />
+                <div>
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="filter-title">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Подвал -->
     <footer class="footer">
-      <a href="./index.html" class="logo link">
-        <span class="web-logo">Web</span><span class="studio-logo">Studio</span>
-      </a>
-      <address class="address">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com" class="email link">info@example.com</a>
-        <a href="tel:+380991111111" class="telnumber link">+38 099 111 11 11</a>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo link">
+          <span class="web-logo">Web</span><span class="studio-logo">Studio</span>
+        </a>
+        <address class="address">
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <a href="mailto:info@example.com" class="email link">info@example.com</a>
+          <a href="tel:+380991111111" class="telnumber link">+38 099 111 11 11</a>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
