--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Шапка -->
-    <header>
+    <header class="header">
       <!-- Меню навигации -->
       <div class="container header-content">
         <nav class="navigation">
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <!-- Контакты -->
-        <div>
+        <div class="header-contacts">
           <a href="mailto:info@devstudio.com" class="email link">info@devstudio.com</a>
           <a href="tel:+380961111111" class="telnumber link">+38 096 111 11 11</a>
         </div>
