--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
-            Эффективные решения <br />
-            для вашего бизнеса
+            Эффективные решения для вашего бизнеса
           </h1>
           <button class="hero-button" type="button">Заказать услугу</button>
         </div>
